Fix image alignment

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@
 
 .pictures {
     width: 300px;
-    height:auto;
-    vertical-align:top
+    height:300px;
+}
+
+.column {
+    float: left;
+    width: 33.33%
 }
